--- a/problems_11_20.ipynb
+++ b/problems_11_20.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "49\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### 11. Container With Most Water\n",
     "class Solution:\n",
@@ -253,20 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3, 0, 1, 2]\n",
-      "-2 3\n",
-      "-3 0 2 -2\n",
-      "-1 2\n",
-      "-3 1 2 -1\n",
-      "0 1\n",
-      "0 1 2 2\n",
       "0\n"
      ]
     }
@@ -316,15 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ad', 'ae', 'af', 'bd', 'be', 'bf', 'cd', 'ce', 'cf']\n",
-      "None\n"
+      "['ad', 'ae', 'af', 'bd', 'be', 'bf', 'cd', 'ce', 'cf']\n"
      ]
     }
    ],
@@ -379,24 +363,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 2, 2, 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 18. 4Sum\n",
+    "class Solution:\n",
+    "    def fourSum(self, nums, target):\n",
+    "        l = len(nums)\n",
+    "        if l < 4:\n",
+    "            return []\n",
+    "\n",
+    "        # 排序\n",
+    "        nums.sort()\n",
+    "        \n",
+    "        # 算出最小值\n",
+    "        min_sum = nums[0] + nums[1] + nums[2] + nums[3]\n",
+    "        # 如果最小值比目标值大,直接结束\n",
+    "        if min_sum > target:\n",
+    "            return []\n",
+    "        \n",
+    "        # 算出最大值\n",
+    "        max_sum = nums[-1] + nums[-2] + nums[-3] + nums[-4]\n",
+    "        # 如果最大值比目标值小,直接结束\n",
+    "        if max_sum < target:\n",
+    "            return []\n",
+    "        \n",
+    "        res = []\n",
+    "        for i in range(l):\n",
+    "            for k in range(i+1, l):\n",
+    "                left = k + 1\n",
+    "                right = l - 1\n",
+    "                \n",
+    "                while left < right:\n",
+    "                    # 计算结果,四元和与目标值的差\n",
+    "                    result = nums[i] + nums[k] + nums[left] + nums[right] - target\n",
+    "                    \n",
+    "                    if result > 0:\n",
+    "                        right -= 1\n",
+    "                    elif result < 0:\n",
+    "                        left += 1\n",
+    "                    else:\n",
+    "                        once = [nums[i], nums[k], nums[left], nums[right]]\n",
+    "                        if once not in res:\n",
+    "                            res.append(once)\n",
+    "                        \n",
+    "                        while left < right and nums[left] == nums[left + 1]:\n",
+    "                            left += 1\n",
+    "                        while left < right and nums[right] == nums[right - 1]:\n",
+    "                            right -= 1\n",
+    "                        \n",
+    "                        left += 1\n",
+    "                        right -= 1\n",
+    "        return res\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "solution = Solution()\n",
+    "print(solution.fourSum([2,2,2,2,2], 8))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.ListNode object at 0x7faf14037910>\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 19. Remove Nth Node From End of List\n",
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "class Solution:\n",
+    "    def removeNthFromEnd(self, head, n):\n",
+    "        nums = []\n",
+    "        # listNode -> list\n",
+    "        while head.next:\n",
+    "            nums.append(head.val)\n",
+    "            head = head.next\n",
+    "        nums.append(head.val)\n",
+    "        # 取出指定位置的数\n",
+    "        nums.pop(-n)\n",
+    "        # 倒序\n",
+    "        nums.reverse()\n",
+    "        head = None\n",
+    "        # list -> ListNode\n",
+    "        for i in nums:\n",
+    "            head = ListNode(i, head)\n",
+    "        return head\n",
+    "\n",
+    "solution = Solution()\n",
+    "\n",
+    "nums = [1,2,3,4,5]\n",
+    "nums.reverse()\n",
+    "head = None\n",
+    "for i in nums:\n",
+    "    head = ListNode(i, head)\n",
+    "\n",
+    "print(solution.removeNthFromEnd(head, 2))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 20. Valid Parentheses\n",
+    "class Solution:\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        datas = {\n",
+    "            \"(\": \")\",\n",
+    "            \"[\": \"]\",\n",
+    "            \"{\": \"}\"\n",
+    "        }\n",
+    "        lefts = [\"(\", \"[\", \"{\"]\n",
+    "        rights = [\")\", \"]\", \"}\"]\n",
+    "        \n",
+    "        check_list = []\n",
+    "        \n",
+    "        for c in s:\n",
+    "            if c in lefts:\n",
+    "                check_list.append(c)\n",
+    "            elif c in rights:\n",
+    "                if check_list == []:\n",
+    "                    return False\n",
+    "                out = check_list.pop()\n",
+    "                if c != datas[out]:\n",
+    "                    return False\n",
+    "        \n",
+    "        if len(check_list) > 0:\n",
+    "            return False\n",
+    "        \n",
+    "        return True\n",
+    "        \n",
+    "\n",
+    "solution = Solution()\n",
+    "print(solution.isValid(\"{\"))"
+   ]
   },
   {
    "cell_type": "code",
@@ -436,9 +568,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "teiVenv",
    "language": "python",
-   "name": "venv"
+   "name": "teivenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -450,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
