--- a/problems_21_30.ipynb
+++ b/problems_21_30.ipynb
@@ -179,38 +179,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.ListNode object at 0x7f13586eb700>\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 24. Swap Nodes in Pairs\n",
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "class Solution:\n",
+    "    def swapPairs(self, head: ListNode) -> ListNode:\n",
+    "        if not head:\n",
+    "            return head\n",
+    "        nums = []\n",
+    "        while head.next:\n",
+    "            nums.append(head.val)\n",
+    "            head = head.next\n",
+    "        nums.append(head.val)\n",
+    "        \n",
+    "        for i in range(1, len(nums), 2):\n",
+    "            # 取出数字\n",
+    "            temp = nums.pop(i)\n",
+    "            # 将数字插入前一个数字之前\n",
+    "            nums.insert(i-1, temp)\n",
+    "        \n",
+    "        nums.reverse()\n",
+    "        \n",
+    "        res = None\n",
+    "        for i in nums:\n",
+    "            res = ListNode(i, res)\n",
+    "        \n",
+    "        return res\n",
+    "\n",
+    "\n",
+    "\n",
+    "solution = Solution()\n",
+    "l1 = [1,2,3,4]\n",
+    "\n",
+    "n1 = None\n",
+    "\n",
+    "l1.reverse()\n",
+    "\n",
+    "for i in l1:\n",
+    "    n1 = ListNode(i, n1)\n",
+    "\n",
+    "print(solution.swapPairs(n1))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[4, 1]\n",
+      "<__main__.ListNode object at 0x7f13587121f0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 25. Reverse Nodes in k-Group\n",
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "class Solution:\n",
+    "    def reverseKGroup(self, head: ListNode, k) -> ListNode:\n",
+    "        if not head or k == 1:\n",
+    "            return head\n",
+    "        nums = []\n",
+    "        while head.next:\n",
+    "            nums.append(head.val)\n",
+    "            head = head.next\n",
+    "        nums.append(head.val)\n",
+    "        \n",
+    "        reverse_nums = []\n",
+    "        for i in range(k-1, len(nums), k):\n",
+    "            print(i)\n",
+    "            # 每k个数据,倒序存入list中\n",
+    "            reverse_nums.extend(list(reversed(nums[i+1-k: i+1])))\n",
+    "\n",
+    "        # nums值数量更多\n",
+    "        if len(reverse_nums) < len(nums):\n",
+    "            reverse_nums.extend(nums[len(reverse_nums):])\n",
+    "        print(reverse_nums)\n",
+    "        reverse_nums.reverse()\n",
+    "        \n",
+    "        res = None\n",
+    "        for i in reverse_nums:\n",
+    "            res = ListNode(i, res)\n",
+    "        \n",
+    "        return res\n",
+    "\n",
+    "\n",
+    "\n",
+    "solution = Solution()\n",
+    "l1 = [1,2,3,4]\n",
+    "\n",
+    "n1 = None\n",
+    "\n",
+    "l1.reverse()\n",
+    "\n",
+    "for i in l1:\n",
+    "    n1 = ListNode(i, n1)\n",
+    "\n",
+    "print(solution.reverseKGroup(n1, 2))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 26. Remove Duplicates from Sorted Array\n",
+    "class Solution:\n",
+    "    def removeDuplicates(self, nums):\n",
+    "        res = sorted(list(set(nums)))\n",
+    "        \n",
+    "        for i in range(len(res)):\n",
+    "            nums[i] = res[i]\n",
+    "        return len(res)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "solution = Solution()\n",
+    "print(solution.removeDuplicates([1,1,2]))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[2, 2]\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 27. Remove Element\n",
+    "class Solution:\n",
+    "    def removeElement(self, nums, val: int) -> int:\n",
+    "        for i in range(len(nums) - 1, -1, -1):\n",
+    "\n",
+    "            if nums[i] == val:\n",
+    "                nums.pop(i)\n",
+    "        \n",
+    "        return len(nums)\n",
+    "    \n",
+    "    def removeElement2(self, nums, val):\n",
+    "        nums = [i for i in nums if i != val]\n",
+    "        print(nums)\n",
+    "        return len(nums)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "solution = Solution()\n",
+    "print(solution.removeElement([1,1,2], 1))\n",
+    "print(solution.removeElement2([3,2,2,3], 3))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 28. Implement strStr()\n",
+    "class Solution:\n",
+    "    def strStr(self, haystack: str, needle: str) -> int:\n",
+    "        if needle == \"\":\n",
+    "            return 0\n",
+    "        \n",
+    "        needle_len = len(needle)\n",
+    "        if needle_len > len(haystack):\n",
+    "            return -1\n",
+    "        \n",
+    "        for i in range(len(haystack) - needle_len + 1):\n",
+    "            \n",
+    "            if haystack[i:i+needle_len] == needle:\n",
+    "                return i\n",
+    "        \n",
+    "        return -1\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "solution = Solution()\n",
+    "print(solution.strStr(\"aagfree\", \"gfre\"))"
+   ]
   },
   {
    "cell_type": "code",
