--- a/problems_21_30.ipynb
+++ b/problems_21_30.ipynb
@@ -408,17 +408,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 3 14 16\n",
+      "4 3 2 20\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 29. Divide Two Integers\n",
+    "class Solution:\n",
+    "    def divide(self, dividend: int, divisor: int) -> int:\n",
+    "        sign = \"+\"\n",
+    "        if (dividend < 0 and divisor > 0) or dividend > 0 and divisor < 0:\n",
+    "            sign = \"-\"\n",
+    "        \n",
+    "        if dividend < 0:\n",
+    "            dividend = 0 - dividend\n",
+    "        if divisor < 0:\n",
+    "            divisor = 0 - divisor\n",
+    "            \n",
+    "        if dividend < divisor:\n",
+    "            return 0\n",
+    "        \n",
+    "        if divisor == 1:\n",
+    "            count = dividend\n",
+    "        else:\n",
+    "            # count倍增次数\n",
+    "            count = 0\n",
+    "            # sums初始化为除数\n",
+    "            sums = divisor\n",
+    "            # remain是余数,初始化为被除数\n",
+    "            remain = dividend\n",
+    "            # \n",
+    "            while remain >= sums:\n",
+    "                sub_count = 1\n",
+    "                # 倍增存在\n",
+    "                while sums + sums < remain:\n",
+    "                    sums += sums\n",
+    "                    sub_count += sub_count\n",
+    "                # 计算余数\n",
+    "                remain = remain - sums\n",
+    "                # 重新设置除数\n",
+    "                sums = divisor\n",
+    "                # 倍增次数保存\n",
+    "                count += sub_count\n",
+    "        \n",
+    "        res = count\n",
+    "        if sign == \"-\":\n",
+    "            res = 0 - res\n",
+    "            if res < -2147483648:\n",
+    "                res = -2147483648\n",
+    "        else:\n",
+    "            if res >= 2147483648:\n",
+    "                res = 2147483647\n",
+    "        return res\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "solution = Solution()\n",
+    "print(solution.divide(62, 3))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 30. Substring with Concatenation of All Words\n",
+    "class Solution:\n",
+    "    def findSubstring(self, s: str, words):\n",
+    "        s_len = len(s)\n",
+    "        list_len = len(words)\n",
+    "        word_len = len(words[0])\n",
+    "        max_len = list_len * word_len\n",
+    "        \n",
+    "        if s_len < max_len:\n",
+    "            return []\n",
+    "        \n",
+    "        # 单词去除重复\n",
+    "        words_set_list = list(set(words))\n",
+    "        # 单词初始化dict\n",
+    "        words_zero = {word: 0 for word in words}\n",
+    "        # 单词出现次数dict\n",
+    "        words_times = words_zero.copy()\n",
+    "        for word in words:\n",
+    "            words_times[word] += 1\n",
+    "        \n",
+    "        # 结果\n",
+    "        res = []\n",
+    "        # 遍历总长度的字符串\n",
+    "        for i in range(s_len - max_len + 1):\n",
+    "            words_dict = words_zero.copy()\n",
+    "            flag = True\n",
+    "            for k in range(i, i + max_len, word_len):\n",
+    "                temp_word = s[k: k+word_len]\n",
+    "                \n",
+    "                # 单词组中没有这个单词,结束\n",
+    "                if temp_word not in words_dict.keys():\n",
+    "                    flag = False\n",
+    "                    break\n",
+    "                \n",
+    "                # 单词出现次数加一\n",
+    "                words_dict[temp_word] += 1\n",
+    "                # 文中单词出现次数,大于单词组中的次数,结束\n",
+    "                if words_dict[temp_word] > words_times[temp_word]:\n",
+    "                    flag = False\n",
+    "                    break\n",
+    "\n",
+    "            # 如果没有中途跳出,添加下标\n",
+    "            if flag: res.append(i)\n",
+    "        \n",
+    "        return res\n",
+    "\n",
+    "        \n",
+    "solution = Solution()\n",
+    "print(solution.findSubstring(\"barfoothefoobarman\", [\"foo\",\"bar\"]))"
+   ]
   },
   {
    "cell_type": "code",
